Add scoreboard and reset button

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    <div class>Result: <span class="results"></span></div>
+    <div class="choices"></div>
+    <div>Result: <span class="results"></span></div>
     <div class="final-results"></div>
+    <div class="score"></div>
     <button class="reset-button">Reset</button>
 </body>
 </html>
