--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id="scissors">Scissors</button>
     </div>
     <div class="choices"></div>
-    <div>Result: <span class="results"></span></div>
+    <div><span class="results"></span></div>
     <div class="final-results"></div>
     <div class="score"></div>
     <button class="reset-button">Reset</button>
