Add instruction text that persists after reset

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    
+    <div class="choices"></div>
+    <div><span class="results">Make your selection!</span></div>
+    <div class="final-results"></div>
+    <div class="score"></div>
     <div class="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
-    <div class="choices"></div>
-    <div><span class="results"></span></div>
-    <div class="final-results"></div>
-    <div class="score"></div>
     <button class="reset-button">Reset</button>
 </body>
 </html>
